tests/baselines/reference/parse2.errors.txt
==== tests/cases/compiler/parse2.ts (1 errors) ====
    function foo() {
     foo(
    }
    ~
!!! parse2.ts(3,1): error TS1008: Unexpected token; 'expression' expected.